# pawn_chess

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp
src/: board_handler.cpp  board_handler.h  evaluation.cpp  evaluation.h  io_manager.cpp  io_manager.h  minmax.cpp  minmax.h  utils.h
